// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search.vue Rendering should render empty state correctly 1`] = `
<section class="page">
  <stickysubheader-stub isvisible="true" class="page-subheader"><span class="title">SearchPage.title.searchTerm</span></stickysubheader-stub>
  <div class="container grid">
    <div class="full-width">
      <section class="page-section">
        <div class="section-title grid-cell title is-medium">SearchPage.sections.maps</div>
        <!---->
        <ul class="grid">
          <div class="grid-cell grid-cell--col4 grid-cell--col6--tablet grid-cell--col12--mobile is-caption text maps--empty">
            SearchPage.emptyText.maps
          </div>
        </ul>
        <!---->
      </section>
      <section class="page__section">
        <div class="section-title grid-cell title is-medium">SearchPage.sections.data</div>
        <ul class="grid-cell grid-cell--col12">
          <div class="is-caption text">
            SearchPage.emptyText.datasets
          </div>
        </ul>
        <!---->
        <!---->
      </section>
    </div>
  </div>
</section>
`;

exports[`Search.vue Rendering should render fetching state correctly 1`] = `
<section class="page">
  <stickysubheader-stub isvisible="true" class="page-subheader"><span class="title">
      SearchPage.title.allFetching
      <span class="loading"><img svg-inline="" src="../assets/icons/common/loading.svg" class="loading__svg"></span></span></stickysubheader-stub>
  <div class="container grid">
    <div class="full-width">
      <section class="page-section">
        <div class="section-title grid-cell title is-medium">SearchPage.sections.maps</div>
        <ul class="grid">
          <li class="grid-cell grid-cell--col4 grid-cell--col6--tablet grid-cell--col12--mobile map-element">
            <mapcardfake-stub></mapcardfake-stub>
          </li>
          <li class="grid-cell grid-cell--col4 grid-cell--col6--tablet grid-cell--col12--mobile map-element">
            <mapcardfake-stub></mapcardfake-stub>
          </li>
          <li class="grid-cell grid-cell--col4 grid-cell--col6--tablet grid-cell--col12--mobile map-element">
            <mapcardfake-stub></mapcardfake-stub>
          </li>
        </ul>
        <!---->
        <!---->
      </section>
      <section class="page__section">
        <div class="section-title grid-cell title is-medium">SearchPage.sections.data</div>
        <!---->
        <ul class="grid-cell grid-cell--col12">
          <li class="dataset-item">
            <datasetcardfake-stub></datasetcardfake-stub>
          </li>
          <li class="dataset-item">
            <datasetcardfake-stub></datasetcardfake-stub>
          </li>
          <li class="dataset-item">
            <datasetcardfake-stub></datasetcardfake-stub>
          </li>
        </ul>
        <!---->
      </section>
    </div>
  </div>
</section>
`;

exports[`Search.vue Rendering should render search results correctly 1`] = `
<section class="page">
  <stickysubheader-stub isvisible="true" class="page-subheader"><span class="title">SearchPage.title.searchTerm</span></stickysubheader-stub>
  <div class="container grid">
    <div class="full-width">
      <section class="page-section has-pagination">
        <div class="section-title grid-cell title is-medium">SearchPage.sections.maps</div>
        <!---->
        <ul class="grid">
          <li class="grid-cell grid-cell--col4 grid-cell--col6--tablet grid-cell--col12--mobile map-element">
            <mapcard-stub map="[object Object]"></mapcard-stub>
          </li>
          <li class="grid-cell grid-cell--col4 grid-cell--col6--tablet grid-cell--col12--mobile map-element">
            <mapcard-stub map="[object Object]"></mapcard-stub>
          </li>
          <!---->
        </ul>
        <pagination-stub page="1" numpages="2"></pagination-stub>
      </section>
      <section class="page__section">
        <div class="section-title grid-cell title is-medium">SearchPage.sections.data</div>
        <ul class="grid-cell grid-cell--col12">
          <li class="dataset-item">
            <datasetcard-stub dataset="[object Object]"></datasetcard-stub>
          </li>
          <li class="dataset-item">
            <datasetcard-stub dataset="[object Object]"></datasetcard-stub>
          </li>
          <!---->
        </ul>
        <!---->
        <pagination-stub page="1" numpages="2" class="pagination-element"></pagination-stub>
      </section>
    </div>
  </div>
</section>
`;
